--- a/style.css
+++ b/style.css
@@ -8,13 +8,16 @@
 }
 
 body {
+  height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: linear-gradient(45deg, #373737, #000000);
 }
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -83,6 +86,9 @@ button {
   background-color: #ffffff;
   box-shadow: 5px 5px 8px #00000020, -5px -5px 8px #d3d2d2;
   cursor: pointer;
+}
+button:hover {
+  background-color: #efefef;
 }
 
 .equalBtn {
